# trait_tests

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
tests/: associated_type_on_trait.rs  example.rs  example_1_type_arg.rs  example_1_type_arg_with_type_arg.rs  example_2_type_arg.rs  impl_with_different_test_type_arguments.rs  multiple_impl_generic_params.rs
