[package]
name = "trait_tests"
description="A compiler plugin to allow tests to be defined agaist traits."
version = "0.3.0"
authors = ["Giles Cope <gilescope@gmail.com>"]
repository = "https://github.com/gilescope/trait_tests"
readme="README.md"
keywords=["testing", "test", "traits"]
categories=["development-tools::testing"]
maintenance= { status="experimental" }
license="MIT"

[lib]
proc-macro = true
crate-type = ["proc-macro"]


[dependencies]
syn="0.13"
quote="0.5"
proc-macro2="0.3"

[features]
default=["syn/full"]
